fix(styles): .naturalList having weird spacing on Safari

--- a/assets/pages/index/page.css
+++ b/assets/pages/index/page.css
@@ -248,6 +248,7 @@ ul {
 
   ul.naturalList li {
     display: inline-block;
+    vertical-align: top;
   }
 
   ul.naturalList li:not(:last-child):after {
